themes/harassmap/assets/scss/pages/_homepage.scss
@import '../variables';
@import "rem";

.bg--drop {
  background: url('/themes/harassmap/assets/img/home/drop.png') no-repeat center top;
  background-size: 100% auto;

  @include rem((padding-top: 200px));

  @include media-breakpoint-up(lg) {
    background-position: center right;
    background-size: auto auto;
    min-height: 300px;
    padding-top: 0;

    .ar & {
      background-position: center left;
    }
  }

  p {
    color: $white;

    @include merriweather();
    @include rem((font-size: 14px, padding: 0 0 30px, margin: 0));
  }
}

.bottom-links {
  position: relative;
  height: 220px;
  width: 100%;

  .img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 10;
  }

  .text {
    display: table;
    height: 100%;
    position: relative;
    text-align: center;
    width: 100%;
    z-index: 11;

    @include rem((padding: 0 20px));

    p {
      color: $white;
      display: table-cell;
      font-weight: $normal;
      margin: 0;
      padding: 0;
      vertical-align: middle;

      @include oswald();
      @include rem((font-size: 36px));

      .ar & {
        font-weight: $bold;
      }
    }

  }

}

